chore: updated api patch requests
